--- a/src/components/BreakfastPage/styles.module.css
+++ b/src/components/BreakfastPage/styles.module.css
@@ -1,6 +1,7 @@
 .container{
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 50% 50%;
+    overflow-x: hidden;
     gap: 10px;
 }
 
