--- a/src/components/BurgersMenu/styles.module.css
+++ b/src/components/BurgersMenu/styles.module.css
@@ -27,6 +27,10 @@
     text-align: center;
 }
 
+.eventBubbling{
+    pointer-events: none;
+}
+
 @media (max-width: 770px){
     .container{
         grid-template-columns: auto;
