--- a/src/components/BurgersMenu/styles.module.css
+++ b/src/components/BurgersMenu/styles.module.css
@@ -1,3 +1,4 @@
+
 .container{
     display: grid;
     grid-template-columns: 50% 50%;
@@ -25,6 +26,7 @@
     font-weight: bold;
     color:rgb(189, 189, 189);
     text-align: center;
+    text-decoration: none;
 }
 
 .eventBubbling{
