started manipulating the nav bar

--- a/src/components/NavigationBar/styles.module.css
+++ b/src/components/NavigationBar/styles.module.css
@@ -65,6 +65,14 @@
     pointer-events: none;
 }
 
+
+/* new navigation bar that appears when user clicks on locations or delivery*/
+
+.newFoodMenu{
+    width: 900px;
+}
+
+
 @media (max-width: 1000px){
     .socialMedia{
         display: none;
