--- a/src/components/LocationsPage/styles.module.css
+++ b/src/components/LocationsPage/styles.module.css
@@ -1,13 +1,58 @@
-.locationContainer{
-    display: flex;
-    flex-direction: column;
+.restaurantInfoContainer{
+    display: grid;
+    grid-template-columns: 40% 30% 30%;
+    padding: 1.5rem;
+    background-color: rgb(236, 235, 235);
 
 }
-.URL{
-    background-color: #e21737;
-    padding: 1.2rem;
-    color: white;
+
+.gridItemOne, .gridItemTwo, .gridItemThree, .gridItemFour{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 0.8rem;
+    padding: 1.2rem;
+    color: #545554;
+}
+
+.gridItemTwo .gridItemFour{
+    font-size: 1.4rem;
+}
+
+.gridItemOne{
+    grid-column: 1/5;
+    text-align: center;
+    font-size: 4.2rem;
+}
+
+.gridItemTwo{
+    text-align: center;
+}
+
+.gridItemThree{
+    font-size: 1.2rem;
+    width: 300px;
+}
+
+.gridItemFour{
+    width: 200px;
+}
+
+.hours{
+    font-size: 1.4rem;
+    color: #545554;
+    margin-bottom: 15px;
+}
+
+.dropdown{
+    width: 100%;
+    padding: 1.2rem;
+    font-size: 1.2rem;
     font-weight: bold;
 }
+
+.blackButtons{
+    background-color: black;
+    color: white;
+    padding: 0.9rem;
+    width: 200px;
+    margin: 3px;
+}
+
