--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -2,6 +2,12 @@ body{
     height: 100%;
 }
 
+*{
+    box-sizing: border-box;    
+    padding: 0px;
+    margin: 0px;
+}
+
 
 @media (max-width: 1000px){
     body{
