--- a/src/components/LocationsPage/styles.module.css
+++ b/src/components/LocationsPage/styles.module.css
@@ -22,9 +22,6 @@
     font-size: 4.2rem;
 }
 
-.gridItemTwo{
-    text-align: center;
-}
 
 .gridItemThree{
     font-size: 1.2rem;
@@ -37,8 +34,8 @@
 
 .hours{
     font-size: 1.4rem;
+    padding-bottom: 1.2rem; 
     color: #545554;
-    margin-bottom: 15px;
 }
 
 .dropdown{
