--- a/src/components/LocationsPage/styles.module.css
+++ b/src/components/LocationsPage/styles.module.css
@@ -24,6 +24,7 @@
 
 
 .gridItemThree{
+    font-weight:bold;
     font-size: 1.2rem;
     width: 300px;
 }
@@ -34,6 +35,7 @@
 
 .hours{
     font-size: 1.4rem;
+    font-weight: bold;
     padding-bottom: 1.2rem; 
     color: #545554;
 }
@@ -51,5 +53,6 @@
     padding: 0.9rem;
     width: 200px;
     margin: 3px;
+    font-weight: 900;
 }
 
