--- a/src/components/LocationsPage/MoreInfo/styles.module.css
+++ b/src/components/LocationsPage/MoreInfo/styles.module.css
@@ -2,9 +2,64 @@
     display: flex;
     flex-wrap: wrap;
     width: 100vw;
+    height: auto;
+}
+.flexItemOne, .flexItemFour, .flexItemFive{
+    background-color: #e21737;
 }
 
-.flexItemOne, .flexItemTwo, .flexItemThree, .flexItemFour,
-.flexItemFive, .flexItemSix, .flexItemSeven, .flexItemEight{
+.flexItemTwo, .flexItemThree, .flexItemFive, 
+.flexItemSix, .flexItemSeven, .flexItemEight{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
     flex-basis: 50%;
+    height: auto;
+}
+
+.flexItemOne, .flexItemFour{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-basis: 50%;
+    height: auto;
+}
+
+.applyButton{
+    padding: 5px 10px;
+    color: white;
+    background-color: black;
+    font-weight: bold;
+}
+
+.blackButtons{
+    display: flex;
+    width: 400px;
+    justify-content: space-evenly;
+}
+
+.buttonImage{
+    object-fit: contain;
+    width: 100px;
+}
+
+.images{
+    display: block;
+    margin: auto;
+    object-fit: contain;
+    padding: 30px 0px;
+    width: 90%;
+}
+
+.title{
+    color: #545554;
+    font-size: 2.4rem;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.description{
+    padding: 50px;
+    font-size: 1.2rem;
 }
