--- a/src/components/LocationsPage/MoreInfo/TextCarousel/styles.module.css
+++ b/src/components/LocationsPage/MoreInfo/TextCarousel/styles.module.css
@@ -17,6 +17,7 @@
     display: flex;
     flex-direction: row;
     width: auto;
+    z-index: 1;
 }
 
 .nestedFlex{
@@ -29,6 +30,7 @@
 
 .left, .right{
     position: absolute;
+    z-index: 2;
 }
 
 .left{
