--- a/src/components/LocationsPage/MoreInfo/TextCarousel/styles.module.css
+++ b/src/components/LocationsPage/MoreInfo/TextCarousel/styles.module.css
@@ -43,6 +43,23 @@
     top: 50%;
 }
 
+.dotNav{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+.dot{
+    display: inline-block;
+    margin: 10px;
+    padding: 5px;
+    width: 5px;
+    border-radius: 100%;
+    border: 1px solid black;
+    background-color: white;
+}
+
 .eventBubbling{
     pointer-events: none;
 }
