--- a/src/components/LocationsPage/MoreInfo/TextCarousel/styles.module.css
+++ b/src/components/LocationsPage/MoreInfo/TextCarousel/styles.module.css
@@ -31,6 +31,9 @@
 .left, .right{
     position: absolute;
     z-index: 2;
+    border: none;
+    background-color: none;
+    cursor: pointer;
 }
 
 .left{
@@ -58,6 +61,7 @@
     border-radius: 100%;
     border: 1px solid black;
     background-color: white;
+    cursor: pointer;
 }
 
 .eventBubbling{
@@ -66,4 +70,8 @@
 
 .currentSlide{
     content: '';
+}
+
+.currentDot{
+    background-color: grey;
 }
