finished with the locations page

--- a/src/components/LocationsPage/MoreInfo/TextCarousel/styles.module.css
+++ b/src/components/LocationsPage/MoreInfo/TextCarousel/styles.module.css
@@ -1,18 +1,26 @@
+.flexBox{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .carouselContainer{
+    padding: 1.2rem;
     position: relative;
-    width: 500px;
+    width: 400px;
 }
 
 .window{
     position: relative;
-    width: 500px;
-    height: 100px;
+    width: 400px;
+    height: 200px;
     overflow: hidden;
 }
 
 .flexContainer{
     position: absolute;
-    left: 0px;
+    left: -20px;
     transition: left 0.5s ease-in-out;
     display: flex;
     flex-direction: row;
@@ -25,7 +33,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 500px;
+    width: 400px;
 }
 
 .left, .right{
@@ -74,4 +82,38 @@
 
 .currentDot{
     background-color: grey;
+}
+
+.locationsTitle{
+    color: #545554;
+    font-size: 2.4rem;
+    text-align: center;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.title{
+    font-size: 1.5rem;
+    color: #545554;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    text-decoration: underline;
+    margin: 1.2rem;
+}
+
+.hoursOpen{
+    color: red;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+.address{
+    margin-top: 0.4rem;
+    text-align: center;
+    line-height: 1.4rem;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #545554;
+}
+
+@media(max-width: 1160px){
 }
