--- a/src/components/LocationsPage/FeaturedMenuItems/styles.module.css
+++ b/src/components/LocationsPage/FeaturedMenuItems/styles.module.css
@@ -51,3 +51,29 @@
     font-size: 1.2rem;
     line-height: 25px;
 }
+
+
+@media (max-width: 1000px){
+    .container{
+        grid-template-columns: repeat(2, minmax(0, 1fr))
+    }
+
+    .gridItemOne, .gridItemSix{
+        grid-column: 1/3;
+    }
+}
+
+@media (max-width: 700px){
+    .container{
+        grid-template-columns: repeat(1, minmax(0, 1fr))
+    }
+    .gridItemOne{
+        font-size: 1.8rem;
+        padding: 90px 0px;
+        width: 100%
+    }
+
+    .gridItemOne, .gridItemSix{
+        grid-column: 1/2;
+    }
+}
