--- a/src/components/LocationsPage/MoreInfo/styles.module.css
+++ b/src/components/LocationsPage/MoreInfo/styles.module.css
@@ -6,7 +6,7 @@
 }
 .flexItemTwo, .flexItemThree, 
 .flexItemFive, .flexItemSix, 
-.flexItemSeven, .flexItemEight{
+.flexItemSeven{
     padding: 40px;
 }
 
@@ -38,13 +38,16 @@
     flex-basis: 50%;
 }
 
-.applyButton{
-    padding: 5px 10px;
+.applyButton, .findLocation{
     color: white;
     background-color: black;
     font-weight: bold;
     padding: 1.1rem;
     cursor: pointer;
+}
+
+.findLocation{
+    margin: 1.5rem;
 }
 
 .blackButtons{
@@ -59,7 +62,7 @@
     width: 150px;
 }
 
-.images{
+.imageOne, .imageTwo{
     display: block;
     margin: auto;
     object-fit: contain;
@@ -124,6 +127,44 @@
 .listItem{
     color: red;
 }
+
 .listItem span{
     color:#545554;
+}
+
+.findJackNearYou{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    flex-basis: 70%;
+    background-image: url("./images/red background.jpg");
+    background-size: cover;
+}
+
+
+.findJackTitle{
+    width: 500px;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2.4rem;
+    font-weight: 900;
+    text-align: center;
+    padding: 1.2rem;
+}
+
+@media (max-width: 1000px){
+    .container{
+        flex-wrap: nowrap;
+        flex-direction: column;
+    }
+    .imageOne{
+        width: 100%;
+        padding: 0px;
+    }
+
+    .flexItemTwo, .flexItemSix{
+        border-bottom: 2px solid #545554;
+    }
 }
