--- a/src/components/LocationsPage/styles.module.css
+++ b/src/components/LocationsPage/styles.module.css
@@ -6,6 +6,11 @@
 
 }
 
+.timeOpen{
+    margin-bottom: 1.2rem;
+    pointer-events: none;
+}
+
 .gridItemOne, .gridItemTwo, .gridItemThree, .gridItemFour{
     font-family: Arial, Helvetica, sans-serif;
     padding: 1.2rem;
@@ -40,11 +45,22 @@
     color: #545554;
 }
 
-.dropdown{
+.dropdownButton{
+    text-align: left;
     width: 100%;
+    height: 60px;
     padding: 1.2rem;
     font-size: 1.2rem;
     font-weight: bold;
+    background-color: transparent;
+    border: 3px solid #545554;
+    overflow: hidden;
+    transition: height 0.5s ease-in-out;
+    cursor: pointer;
+}
+
+.dropdownButton.toggle{
+    height: 300px;
 }
 
 .blackButtons{
@@ -56,3 +72,32 @@
     font-weight: 900;
 }
 
+
+@media(max-width: 900px){
+    .restaurantInfoContainer{
+        grid-template-columns: 100%;  
+        padding: 0px;
+    }
+
+    .gridItemOne{
+        font-size: 28px;
+        grid-column: 1/1;
+    }
+
+    .gridItemTwo{
+        padding: 1.2rem 0px;
+    }
+
+    .hours{
+        padding: 0px 0px 1.2rem 1.2rem;
+    }
+    .dropdown{
+        border-left: none;
+        border-right: none;
+    }
+
+
+    .blackButtons, .gridItemFour{
+        width: 100%;
+    }
+}
