--- a/src/components/DeliveryPage/styles.module.css
+++ b/src/components/DeliveryPage/styles.module.css
@@ -22,7 +22,7 @@
     align-items: center;
 }
 
-.jackDelivered, .jackApp, .deliveryPartner{
+.jackDelivered, .jackApp, .deliveryPartnerTitle{
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 3.2rem;
@@ -33,8 +33,9 @@
     padding: 1.5rem;
     font-size: 1.5rem;
 }
-.deliveryPartner{
-    font-size: 1.5rem;
+.deliveryPartnerTitle{
+    font-size: 2.0rem;
+    padding: 1.2rem;
 }
 
 .delivery{
@@ -67,5 +68,49 @@
     background-color: red;
     flex-basis: 50%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
+.deliveryApps{
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    align-content: center;
+    row-gap: 20px;
+    width: 700px;
+}
+
+.appImages{
+    display: block;
+    margin: auto;
+    object-fit: contain;
+    background-color: white;
+    width: 300px;
+    cursor: pointer;
+
+}
+
+@media (max-width: 1050px){
+    .container{
+        flex-direction: column;
+        height: 150vh;
+    }
+
+    .flexItemOne{
+       flex-basis: 30%
+    }
+
+    .flexItemTwo{
+        flex-basis: 70%;
+    }
+
+    .deliveryApps{
+        width: 500px;
+    }
+
+    .appImages{
+        width: 170px;
+    }
+}
