finished with the mobile responsiveness

--- a/src/components/DeliveryPage/styles.module.css
+++ b/src/components/DeliveryPage/styles.module.css
@@ -114,3 +114,12 @@
         width: 170px;
     }
 }
+
+@media (max-width: 500px){
+    .deliveryApps{
+        width: 370px;
+    }
+    .appImages{
+        width: 150px;
+    }
+}
