--- a/src/components/NavigationBar/styles.module.css
+++ b/src/components/NavigationBar/styles.module.css
@@ -4,6 +4,7 @@
     justify-content: space-between;
     align-items: center;
     flex-basis: 80px;
+    overflow: hidden;
 }
 
 .foodMenu{
@@ -65,6 +66,10 @@
     pointer-events: none;
 }
 
+.breakLine{
+    display: none;
+}
+
 
 /* new navigation bar that appears when user clicks on locations or delivery*/
 
@@ -99,4 +104,15 @@
     .itemThree, .itemFour{
         flex-basis: 120px;
     }    
+}
+
+@media (max-width: 520px) {
+
+    .foodMenu {
+        font-size: 0.75rem;
+    }
+
+    .breakLine{
+        display: block;
+    }
 }
